feat（回溯）：添加回溯算法